add more styling, logo, and responsive grid layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -49,8 +49,10 @@ h6 {
 }
 
 #root {
-  background-color: #eeeeee;
+  background-color: #0E2A47;
   min-height: 100%;
+  background-size: cover;
+  background-image: url("../public/bg2.svg");
 }
 
 main {
