--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,12 @@
   width: 100%;
   margin: auto;
   border: 0.5px solid #6f849cb9;
-  border-radius: 15px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 30px rgba(0, 0, 0, 0.15);
 }
 
 .leaflet-container {
   height: 100%;
   width: 100%;
-  border-radius: 15px;
+  border-radius: 5px;
 }
