--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,7 @@ h6 {
   background-color: #0E2A47;
   min-height: 100%;
   background-size: cover;
-  background-image: url("../public/bg2.svg");
+  background-image: url("../public/bg.svg");
 }
 
 main {
